--- a/web/portal/css/tvcultura/sites/transito.css
+++ b/web/portal/css/tvcultura/sites/transito.css
@@ -728,7 +728,7 @@ tr:nth-child(odd) {background: #cbabb7}
 #dialogMarginalPinheiros2,
 #dialogMarginalPinheiros3,
 #dialogaMarginalTiete,
-#dialogaRubemberta,
+#dialogRubemBerta,
 #dialogSantana,
 #dialogPompeia,
 #dialogTiradentes{left: 15% !important; width: 733px;top: 5%!important;}
