--- a/web/portal/css/tvcultura/sites/cocorico/brincadeiras.css
+++ b/web/portal/css/tvcultura/sites/cocorico/brincadeiras.css
@@ -193,7 +193,7 @@ h3.episodio { text-transform:uppercase; color:#f2722f; font-size: 30px; margin:0
 .destaque-home-tv .btn-destaque:hover { color:#fff; }
 .destaque2 .radio .icon-music {  background:url(/portal/images/capaPrograma/cocorico/ico-musica.png) no-repeat; width:38px; height:38px; float:left; z-index: 100; position: relative }
 .destaque2 .radio { padding:0; }
-.destaque2 .radio a { background:url(/portal/images/capaPrograma/cocorico/bg-laranja-radio.jpg) repeat-x; height:40px; line-height:40px; font-size:16px; text-transform:uppercase; color:#fff;  display: block;  -moz-border-radius: 10px 0 0 10px; -webkit-border-radius: 10px 0 0 10px;  border-radius:10px 0 0 10px;  float:left; margin-left:-28px; padding:0 8px 0 35px; z-index: 0; position:relative; }
+.destaque2 .radio a { background:url(/portal/images/capaPrograma/cocorico/bg-laranja-radio.jpg) repeat-x; height:40px; line-height:40px; font-size:16px; text-transform:uppercase; color:#fff;  display: block;  -moz-border-radius: 10px 0 0 10px; -webkit-border-radius: 10px 0 0 10px;  border-radius:10px 0 0 10px;  float:left; margin-left:-28px; padding:0 0 0 34px; z-index: 0; position:relative; }
 .destaque2 .radio a:hover { text-decoration:none; }
 .destaque2 .radio a span { color:#FDF035; margin-left:3px; }
 .destaque2 .radio .borda { background: url(/portal/images/capaPrograma/cocorico/borda-menu2.png) no-repeat -69px 0; width:10px; height:40px; display:block; float:left; }
