--- a/web/portal/css/tvcultura/sites/cocorico/ie8.css
+++ b/web/portal/css/tvcultura/sites/cocorico/ie8.css
@@ -29,7 +29,7 @@
 .destaque2 .radio a { padding:0; }
 .imprimir li.span4 { margin-left:5px !important; height:87px; overflow:hidden; }
 /*.menu .lista-personagens li img { width: 89px; }*/
-.destaque2 .radio .borda { display:none !important; }
+/*.destaque2 .radio .borda { display:none !important; }*/
 .bastidores.span4 { height: 300px; }
 .bastidores a { *clear:both; }
 .bastidores a.span6 { *clear:none; }
