--- a/web/portal/css/tvcultura/sites/cocorico/ie8.css
+++ b/web/portal/css/tvcultura/sites/cocorico/ie8.css
@@ -26,7 +26,7 @@
 .box .tit a { padding:0; margin:0 0 0 15px; }
 .box .tit span { *display:none; }
 .destaque-home .box .mais { margin-left:20px; }
-.destaque2 .radio a { padding:0; }
+.destaque2 .radio a { padding:0; margin-left:-40px; }
 .imprimir li.span4 { margin-left:5px !important; height:87px; overflow:hidden; }
 /*.menu .lista-personagens li img { width: 89px; }*/
 /*.destaque2 .radio .borda { display:none !important; }*/
