--- a/web/portal/css/tvcultura/sites/cocorico/ie8.css
+++ b/web/portal/css/tvcultura/sites/cocorico/ie8.css
@@ -57,3 +57,4 @@
 .menu .navbar .nav > li { *margin-right:2%; }
 
 .interatividade .form-campos .row-fluid i { *margin:0; }
+.interatividade .form-campos .row-fluid .span11 { *width: 200px; }
