--- a/web/portal/css/tvcultura/sites/cocorico/ie8.css
+++ b/web/portal/css/tvcultura/sites/cocorico/ie8.css
@@ -58,3 +58,4 @@
 
 .interatividade .form-campos .row-fluid .span9 { *width: 200px; }
 .interatividade .form-campos .row-fluid .span11 { *width: 350px; }
+.destaque-home-tv.span9 { *width:600px; *overflow:hidden; }
