--- a/web/portal/css/tvcultura/sites/cocorico/ie8.css
+++ b/web/portal/css/tvcultura/sites/cocorico/ie8.css
@@ -58,5 +58,5 @@
 
 .interatividade .form-campos .row-fluid .span9 { *width: 200px; }
 .interatividade .form-campos .row-fluid .span11 { *width: 350px; }
-.interatividade form { *width:300px; *overflow:hidden }
+.interatividade form { *padding:0; }
 .conteudo { *margin-left:0; }
