--- a/web/portal/css/tvcultura/sites/cocorico/tvcocorico.css
+++ b/web/portal/css/tvcultura/sites/cocorico/tvcocorico.css
@@ -371,5 +371,5 @@ p.frase span.last { background-position:-25px 0; float:right; margin:10px -20px 
 #myModal2 img {border-radius:10px; -moz-border-radius: 10px; -webkit-border-radius: 10px;} 
 .destaque-home-tv .promocao { min-width:460px; }
 .interatividade .form-campos #datafile { font-size:11px; }
-
+#myModal2 { top:0; }
 /* /concurso cultural*/
