--- a/web/portal/css/tvcultura/sites/cocorico/tvcocorico.css
+++ b/web/portal/css/tvcultura/sites/cocorico/tvcocorico.css
@@ -74,10 +74,13 @@
 .interatividade .form-campos .last .span9 { margin-bottom:5px; float:left; }
 
 .interatividade #msgErro p,
+.interatividade #msgErro2 p,
 .interatividade #msgAcerto p{color:yellow; text-transform:uppercase;}
 .interatividade #msgErro hr,
+.interatividade #msgErro2 hr,
 .interatividade #msgAcerto hr{border-top: none;border-bottom: 1px dashed yellow;margin: 10px 55px;}  
 .interatividade #msgErro,
+.interatividade #msgErro2,
 .interatividade #msgAcerto{text-align: center; margin: 0 30px; font-weight: bold; height: 205px; padding-top: 105px;} 
 .interatividade .form-campos .file { color:#747B3A; text-transform:uppercase }
 .interatividade #file,
