--- a/web/portal/css/tvcultura/sites/cocorico/tvcocorico.css
+++ b/web/portal/css/tvcultura/sites/cocorico/tvcocorico.css
@@ -77,14 +77,17 @@
 .interatividade #msgErro p,
 .interatividade #msgErro2 p,
 .interatividade #msgErro3 p,
+.interatividade #msgErro4 p,
 .interatividade #msgAcerto p{color:yellow; text-transform:uppercase;}
 .interatividade #msgErro hr,
 .interatividade #msgErro2 hr,
 .interatividade #msgErro3 hr,
+.interatividade #msgErro4 hr,
 .interatividade #msgAcerto hr{border-top: none;border-bottom: 1px dashed yellow;margin: 10px 55px;}  
 .interatividade #msgErro,
 .interatividade #msgErro2,
 .interatividade #msgErro3,
+.interatividade #msgErro4,
 .interatividade #msgAcerto{text-align: center; margin: 0 30px; font-weight: bold; height: 205px; padding-top: 105px;} 
 .interatividade .form-campos .file { color:#747B3A; text-transform:uppercase }
 .interatividade #file,
