--- a/web/portal/css/tvcultura/sites/cedoc2.css
+++ b/web/portal/css/tvcultura/sites/cedoc2.css
@@ -58,12 +58,12 @@ h2,
 .menu li span { width:20px; height:68px; display: block; position:absolute; left:0;}
 .menu li.ativo span,
 .menu li:hover span { background:url(/portal/images/capaPrograma/cedoc/aba-menu.png) no-repeat; }
-.conteudo .search-query.input-medium,
-.conteudo .btn { height:20px; line-height:20px;  border:2px solid #535352; border-left:none; padding:0; margin:0; background:#fff; }
-.conteudo .search-query.input-medium { max-width:125px; border-left:none; font-size:12px; color:#666;  }
-.conteudo .btn { border-right:0; height:24px;  border-left:2px solid #535352; }
-.conteudo form i { margin:0 3px; }
-.conteudo form { margin:20px 15px 20px 0; }
+.menu .search-query.input-medium,
+.menu .btn { height:20px; line-height:20px;  border:2px solid #535352; border-left:none; padding:0; margin:0; background:#fff; }
+.menu .search-query.input-medium { max-width:125px; border-left:none; font-size:12px; color:#666;  }
+.menu .btn { border-right:0; height:24px;  border-left:2px solid #535352; }
+.menu form i { margin:0 3px; }
+.menu form { margin:20px 15px 20px 0; }
 
 .row-fluid { margin:20px 20px 0 20px; width: 96%; }
 .home .span8 img { min-width:620px; }
