--- a/web/portal/css/tvcultura/sites/cedoc2.css
+++ b/web/portal/css/tvcultura/sites/cedoc2.css
@@ -59,9 +59,9 @@ h2,
 .menu li.ativo span,
 .menu li:hover span { background:url(/portal/images/capaPrograma/cedoc/aba-menu.png) no-repeat; }
 .menu .search-query.input-medium,
-.menu .btn { height:20px; line-height:20px;  border:2px solid #535352; border-left:none; padding:0; margin:0; background:#fff; }
+.menu .btn { height:24px; line-height:24px;  border:2px solid #535352; border-left:none; padding:0; margin:0; background:#fff; }
 .menu .search-query.input-medium { max-width:125px; border-left:none; font-size:12px; color:#666;  }
-.menu .btn { border-right:0; height:24px;  border-left:2px solid #535352; }
+.menu .btn { border-right:0;  border-left:2px solid #535352; }
 .menu form i { margin:0 3px; }
 .menu form { margin:20px 15px 20px 0; }
 
