--- a/web/portal/css/tvcultura/sites/cocorico/tvcocorico.css
+++ b/web/portal/css/tvcultura/sites/cocorico/tvcocorico.css
@@ -382,4 +382,5 @@ p.frase span.last { background-position:-25px 0; float:right; margin:10px -20px 
 .destaque-home-tv .promocao { min-width:460px; }
 .interatividade .form-campos #datafile { font-size:11px; }
 #myModal2 { top:10%; }
+.btn-produto p{color:#FFF;}
 /* /concurso cultural*/
