--- a/web/portal/css/tvcultura/sites/cedoc2.css
+++ b/web/portal/css/tvcultura/sites/cedoc2.css
@@ -183,4 +183,5 @@ h2 { text-transform:uppercase; font-size:18px; color:#666666; font-weight:normal
 .busca .voltar { color:#000; text-decoration:underline; }
 /* /resultado busca*/
 
+.row-fluid .span4 { width: 29%; }
 
