--- a/web/portal/css/tvcultura/sites/cedoc2.css
+++ b/web/portal/css/tvcultura/sites/cedoc2.css
@@ -185,3 +185,6 @@ h2 { text-transform:uppercase; font-size:18px; color:#666666; font-weight:normal
 
 .row-fluid .span4 { width: 29%; }
 
+@media (min-width: 768px) and (max-width: 981px) { 
+  .row-fluid .span4 { width:100%; }
+}
