--- a/web/portal/css/tvcultura/sites/cedoc2.css
+++ b/web/portal/css/tvcultura/sites/cedoc2.css
@@ -108,9 +108,9 @@ h2 { text-transform:uppercase; font-size:18px; color:#666666; font-weight:normal
 #footer ul .tit p,
 #footer ul .tit a { font-weight:bold; }
 #footer ul .tit.mg { margin-bottom:0; }
-#footer ul.span3 { max-width:216px;  }
+#footer ul.span3 { max-width:216px; margin-left:3%;  }
 #footer ul.span3.last { border:none; }
-#footer ul.span3.first { margin-left: 20px; }
+#footer ul.span3.first { margin-left: 2%; }
 #footer ul .sic { margin-top:20px; }
 #footer .copyright { text-align:center; font-size:10px; clear:both;}
 /* rodape*/
@@ -186,5 +186,5 @@ h2 { text-transform:uppercase; font-size:18px; color:#666666; font-weight:normal
 .row-fluid .span4 { width: 29%; }
 
 @media (max-width: 1200px)  { 
-  .row-fluid .span4 { width:100%; }
+  .row-fluid .span4 { width:90%; }
 }
