--- a/web/portal/css/tvcultura/sites/cedoc2.css
+++ b/web/portal/css/tvcultura/sites/cedoc2.css
@@ -56,7 +56,7 @@ h2,
 .menu li.cedoc:hover a {  background:url(/portal/images/capaPrograma/cedoc/bg-lista.png) repeat-x bottom;  color:#c2f263 !important;   }
 .home .menu li.ativo.cedoc a, 
 .home .menu li.cedoc:hover a {color:#fff !important;  background:url(/portal/images/capaPrograma/cedoc/bg-lista.png) repeat-x bottom; }
-.home .menu {  top:85px;  box-shadow: 0 3px 8px #000; } 
+.home .menu {  top:14%;  box-shadow: 0 3px 8px #000; } 
 .menu { position:absolute; top:0; background:url(/portal/images/capaPrograma/cedoc/bg-menu.png) repeat; margin-left:0; left: 0; box-shadow: 0 3px 8px #999; width: 200px; }
 .menu li { list-style:none; margin-left:-20px; padding-left:20px; position:relative; }
 .menu li a { padding:0 20px; height:48px; line-height: 48px; color:#fff; text-decoration:none; text-transform:uppercase; font-size:22px; font-weight:bold; display: block; background:url(/portal/images/capaPrograma/cedoc/bg-lista.png) repeat-x bottom;  }
